# PyFreeRdpNative

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/cibw-scripts/: before_all_linux.sh  before_all_macos.sh  before_all_windows.ps1  get_freerdp_version.sh
.github/workflows/: ci.yml  release.yml  wheels.yml
cmake/toolchains/: android.cmake  ios.cmake
docs/: ARCHITECTURE.md  CHANNELS.md  MOBILE.md  PUBLISHING.md
examples/: basic_connect.py  clipboard_sync.py  custom_channel.py  drive_share.py  qt5_common.py  qt5_viewer_gfx.py  qt5_viewer_legacy.py  send_input.py  server_echo.py
pyfreerdp/: __init__.py  _native.c  client.py  display.py  errors.py  loader.py  peer.py  server.py  server_settings.py  settings.py  version.py
pyfreerdp/bindings/: __init__.py  api.py  types.py
pyfreerdp/channels/: __init__.py  base.py  cliprdr.py  custom.py  disp.py  drdynvc.py  encomsp.py  rail.py  rdpdr.py  rdpei.py  remdesk.py  stubs.py
pyfreerdp/winpr/: __init__.py  _loader.py  sspi.py  stream.py
scripts/: __init__.py  build_freerdp.py  check_py2_syntax.py
tests/: test_pyfreerdp.py
