[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PyFreeRdpNative"
version = "0.2.0"
description = "Python bindings for FreeRDP - client + server + virtual channels + WinPR helpers."
readme = "README.md"
# 3.8 floor: pyfreerdp itself is Py-3-only, but we deliberately keep the
# source written in Py2-syntax-compatible style (no f-strings, no annotations,
# no dataclasses). The 3.8 floor is set by ctypes feature availability and
# by what we test in CI, not by the syntax we use.
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "pyfreerdp contributors" },
]
keywords = ["rdp", "freerdp", "remote-desktop", "windows", "ctypes", "winpr", "channels"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/example/pyfreerdp"
"Bug Tracker" = "https://github.com/example/pyfreerdp/issues"
"FreeRDP Upstream" = "https://github.com/FreeRDP/FreeRDP"

[project.scripts]
pyfreerdp-build = "pyfreerdp.scripts.build_freerdp:main"

[tool.setuptools.packages.find]
include = ["pyfreerdp*"]
exclude = ["tests*", "examples*", "scripts*"]

[tool.setuptools.package-data]
pyfreerdp = ["_libs/*", "_libs/**/*"]

[tool.ruff]
line-length = 100
# Target a low Py-version so ruff doesn't suggest Py3-only upgrades. Combined
# with the absence of the "UP" rule below, this keeps lint quiet about our
# deliberately-old-style syntax.
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
# Deliberately omit "UP": pyupgrade-style rules would suggest f-strings,
# walrus, etc. - the exact constructs we forbid.
ignore = [
    "E501",   # line length
    "B008",   # mutable defaults in argparse Namespace usage
]

[tool.ruff.lint.per-file-ignores]
# Package __init__.py files re-export the public API; F401 (unused imports)
# is exactly the wrong rule for those.
"pyfreerdp/__init__.py" = ["F401", "I001"]
"pyfreerdp/channels/__init__.py" = ["F401", "I001"]
"pyfreerdp/winpr/__init__.py" = ["F401", "I001"]
# Tests intentionally import a few symbols just to confirm they're exported,
# even when no test body references them by name.
"tests/test_pyfreerdp.py" = ["I001"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: requires a live RDP server (skipped by default)",
    "needs_lib: requires libfreerdp installed on the host",
]

# ---------------------------------------------------------------------------
# cibuildwheel — bundled wheel builder configuration
# ---------------------------------------------------------------------------
# When .github/workflows/wheels.yml runs `cibuildwheel`, this section
# controls what gets built. The default `python -m build` (used by
# release.yml) ignores this section entirely and produces the universal
# `py3-none-any` wheel.
#
# Reference: https://cibuildwheel.pypa.io/en/stable/options/

[tool.cibuildwheel]
# Build for CPython 3.8 through 3.13. PyPy intentionally excluded -
# the binding works on it but adds matrix complexity for ~3% of users.
build = "cp38-* cp39-* cp310-* cp311-* cp312-* cp313-*"
# Skip 32-bit and PowerPC. PyPI download stats agree these are sub-1%.
skip = "*-win32 *-manylinux_i686 *_ppc64le *_s390x *-musllinux_aarch64"

# Force the bundled-wheel build path. This switches setup.py into
# Extension mode, producing platform-tagged wheels.
environment = { PYFREERDP_BUILD_BUNDLED = "1" }

# Build deps come pre-installed via CIBW_BEFORE_ALL (FreeRDP itself).
# At per-Python build time we just need the standard wheel toolchain.
build-frontend = "build"

# After each wheel is built, install it into a fresh venv and run our
# tests. This catches "the wheel imports but the bundled libs don't
# load" regressions, which auditwheel/delocate alone can't catch.
test-requires = "pytest"
test-command = "pytest {project}/tests -v -m 'not integration'"

# --- Linux-specific overrides ----------------------------------------------

[tool.cibuildwheel.linux]
# manylinux_2_28 = RHEL 8 base. Compatible with anything from
# Ubuntu 18.04 / Debian 10 / RHEL 8 onward (covering ~all live distros).
# musllinux_1_2 = Alpine 3.19+ base.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"

# CIBW_BEFORE_ALL runs once per architecture (BEFORE the per-Python build
# loop). It installs build deps and compiles FreeRDP into pyfreerdp/_libs/.
before-all = "bash {project}/.github/cibw-scripts/before_all_linux.sh {project}"

# auditwheel rewrites the wheel after building to bundle libfreerdp +
# its transitive deps. The `--wheel-dir` rewrite is implicit; we just
# need to make sure auditwheel can find the libs we built.
repair-wheel-command = """\
    LD_LIBRARY_PATH=/tmp/freerdp-prefix/lib:/tmp/freerdp-prefix/lib64:$LD_LIBRARY_PATH \
    auditwheel repair -w {dest_dir} {wheel}\
"""

# Pass GITHUB_TOKEN through to the container so get_freerdp_version.sh
# isn't rate-limited by GitHub's API.
environment-pass = ["GITHUB_TOKEN", "PYFREERDP_FREERDP_REF"]

# --- macOS-specific overrides ---------------------------------------------

[tool.cibuildwheel.macos]
before-all = "bash {project}/.github/cibw-scripts/before_all_macos.sh {project}"

# delocate scans the wheel for dyld-loaded dylibs and copies them in,
# rewriting install_names to use @loader_path so the bundle is portable.
repair-wheel-command = """\
    DYLD_LIBRARY_PATH=/tmp/freerdp-prefix/lib:$DYLD_LIBRARY_PATH \
    delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}\
"""

# Apple's BSDish APIs are stable from macOS 11; targeting older is a
# pain (no <stdatomic.h> idioms FreeRDP uses since 3.0).
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0", PYFREERDP_BUILD_BUNDLED = "1" }

# --- Windows-specific overrides -------------------------------------------

[tool.cibuildwheel.windows]
before-all = "pwsh {project}/.github/cibw-scripts/before_all_windows.ps1 {project}"

# delvewheel is the Windows equivalent of auditwheel/delocate. It bundles
# DLLs the wheel's pyd depends on (FreeRDP DLLs + vcpkg-built OpenSSL,
# zlib, libpng, libjpeg-turbo) into a private subdir, rewrites the pyd's
# import table to load them from there.
before-build = "pip install delvewheel"
repair-wheel-command = """\
    delvewheel repair --add-path %FREERDP_BIN_DIR%;%VCPKG_BIN_DIR% -w {dest_dir} {wheel}\
"""
